# kos-scripts

./: .gitignore  Makefile  README.md  pyproject.toml
ksx/: __init__.py
source/boot/: basic.ksx
source/lib/: electric.ksx  files.ksx  geopos.ksx  gravity_turn.ksx  telemetry.ksx  throttle.ksx  transfer.ksx  util.ksx
source/missions/: code-tests.ksx  orbital-science.ksx
source/tests/: files-tests.ksx  latlng-tests.ksx  throttle-twr-tests.ksx  thrust-tests.ksx  transfer-tests.ksx
tests/: test_known_issues.py
