[tool.poetry]
name = "ksx"
version = "0.1.0"
description = ""
authors = [
    "LeonardMH <maybeillrememberit@gmail.com>",
    "Ole Martin Ruud <dev@barskern.no>",
]
license = "MIT"
readme = "README.md"
packages = [
    {include = "ksx"}
]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
numpy = "^1.24.1"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
ksx = 'ksx:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
